Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-99404

Qt Designer: Crash when editing spacer objectName in the Object Inspector Tab

XMLWordPrintable

    • Windows
    • f764dc21cb (qt/qttools/dev) 6b297b7adf (qt/qttools/6.2) 84b26c37c1 (qt/qttools/6.3) 6b297b7adf (qt/tqtc-qttools/6.2) 6b297b7adf (qt/tqtc-qttools/6.2.3) 6b297b7adf (qt/qttools/6.2.4)

      When directly editing the objectName by double-clicking it in the Object Inspector Tab, QT Creator will crash when we click another item inside the Object Inspector tab.  To avoid the crash, I need to press enter key first (to finish editing) then click another item that I want to edit. 

      On the previous version, the objectName will be automatically updated when we click on other items.

        1. testCrasg.zip
          2 kB
        2. 2021-12-22_17-11-11.jpg
          2021-12-22_17-11-11.jpg
          27 kB
        3. qtbug99404_win_stack.txt
          19 kB
        4. qtbug99404.ui
          1 kB
        5. qtbug99404_stack.txt
          42 kB
        6. qtbug99404_diag.diff
          11 kB
        7. qtbug99404_log.txt
          10 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            zufryy Zufry Malik Ibrahim
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes