Qt Designer: Fix crash when changing names in Object inspector

Use QSortFilterProxyModel's sorting capabilities instead of sorting
the children when building the model. This avoids rebuilding the
entire model after changing a name and fixes a crash after changing
the name in the object inspector and then clicking on another item
instead of pressing Enter.

Fixes: QTBUG-99404
Change-Id: I5c13ccfef446ed8491327fcf2ff5c19531e6c102
Reviewed-by: Jarek Kobus <jaroslaw.kobus@qt.io>
(cherry picked from commit f764dc21cb298724a5d460d552a6cff96c995f36)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>